vcs/specs/parser/fail/meta/invalid_pattern_def.vr
// @test: parse-fail
// @level: L0
// @tags: parser, meta, pattern, error
// @description: Test invalid pattern definition without name or body
// @expected-error: E018

pattern;
